--- a/Papiea-design.org
+++ b/Papiea-design.org
@@ -10,7 +10,7 @@ Papiea is aimed to be a reference implementation to a formal general purpose int
 * Definitions
   - _Spec_ - a map containing the desired state of a particular entity
   - _Status_ - a map containing the current statue of a particular entity. Always a superset of Spec
-  - _Metadata_ - Information of the identity of the entity. Must contain at least =uuid=, =kind= and =spec_version=
+  - _Metadata_ - Information of the identity of the entity. Must contain at least =uuid=, =kind= and =specVersion=
   - _Spec version_ - an integer representing the version of the current spec. Updates to spec will =CAS= on this field
   - _Entity_ - The tuple =[Metadata, Spec, Status]=
   - _Kind_ - The "type" of the entity
@@ -26,33 +26,33 @@ Papiea is aimed to be a reference implementation to a formal general purpose int
 
    #+Name: untyped-json-type
    #+BEGIN_SRC go
-   type untyped_json map[string]interface{}
+   type untypedJson map[string]interface{}
    #+END_SRC
 
    Now, spec is simply an entyped_json
    #+Name: spec-struct
    #+BEGIN_SRC go
-   type spec untyped_json
+   type spec untypedJson
    #+END_SRC
 ** Status
    For now its strictly untyped, but there may be a better way to denote the fact that status is a super-set of spec
 
    #+Name: status-struct
    #+BEGIN_SRC go
-   type status untyped_json
+   type status untypedJson
    #+END_SRC
 
 ** Metadata
    Metadata has a bit more structured then spec and status, it must have at least the following items:
    - =uuid= - a unique id representing the identity of this entity
    - =kind= - the "type" of this entity
-   - =spec_version= - the most up-to-date revision of the spec associated with this entity
+   - =specVersion= - the most up-to-date revision of the spec associated with this entity
    #+Name: metadata-struct
    #+BEGIN_SRC go
      type metadata struct {
          uuid uuid
          kind string
-         spec_version int
+         specVersion int
      }
    #+END_SRC
 ** Kind
@@ -62,7 +62,7 @@ Papiea is aimed to be a reference implementation to a formal general purpose int
    #+BEGIN_SRC go
      type kind struct {
          name string
-         entity_structure untyped_json
+         entityStructure untypedJson
      }
    #+END_SRC
 ** Provider description
@@ -70,7 +70,7 @@ Papiea is aimed to be a reference implementation to a formal general purpose int
    are responsible to move the entity from a current status to an intended spec.
    #+Name: provider-desc-struct
    #+BEGIN_SRC go
-     type provider_description struct {
+     type providerDescription struct {
          uuid uuid
          version int
          uri string
@@ -103,10 +103,10 @@ Papiea is aimed to be a reference implementation to a formal general purpose int
 **** Interface
     #+Name: status-db-interface
     #+BEGIN_SRC go
-      type status_db interface {
-          update_status(metadata, status) err
-          get_status(metadata) status, err
-          delete_status(metadata) err
+      type statusDb interface {
+          updateStatus(metadata, status) err
+          getStatus(metadata) status, err
+          deleteStatus(metadata) err
           cleanup() err
       }
     #+END_SRC
@@ -119,9 +119,9 @@ Papiea is aimed to be a reference implementation to a formal general purpose int
 **** Interface
     #+Name: spec-db-interface
     #+BEGIN_SRC go
-      type spec_db interface {
-          cas_spec_change(metadata, status) task, err
-          get_latest_spec(metadata) metadata, spec, err
+      type specDb interface {
+          casSpecChange(metadata, status) task, err
+          getLatestSpec(metadata) metadata, spec, err
           cleanup() err
       }
     #+END_SRC
@@ -132,11 +132,11 @@ Papiea is aimed to be a reference implementation to a formal general purpose int
 **** Interface
     #+Name: providers-db-interface
     #+BEGIN_SRC go
-      type providers_db interface {
-          add_provider(provider_description) err
-          upgrade_provider(from provider_description, to provider_description) err
-          list_providers() []provider_description
-          delete_provider(provider_uuid) err
+      type providersDb interface {
+          addProvider(providerDescription) err
+          upgradeProvider(from providerDescription, to providerDescription) err
+          listProvider() []providerDescription
+          deleteProvider(providerUuid) err
       }
     #+END_SRC
 
@@ -157,7 +157,7 @@ Papiea is aimed to be a reference implementation to a formal general purpose int
      #+Name: task-interface
      #+BEGIN_SRC go
        type task interface {
-           new_task(metadata) task
+           newTask(metadata) task
        }
      #+END_SRC
     
@@ -171,12 +171,12 @@ Papiea is aimed to be a reference implementation to a formal general purpose int
     #+BEGIN_SRC go
       type papiea struct {
           api rest.api
-          status_db
-          spec_db
-          providers_db
+          statusDb
+          specDb
+          providersDb
       }
 
-      type papiea-init interface {
+      type papieaInit interface {
           initialize() papiea, err
       }
     #+END_SRC
@@ -187,21 +187,21 @@ Papiea is aimed to be a reference implementation to a formal general purpose int
        // Initialize papiea engine
        func (papiea papiea) initialize() papiea, err {
            // Load databases
-           papiea.status_db // initialize db connection
-           papiea.spec_db // initialize db connection
-           papiea.providers_db // initialize db connection
+           papiea.statusDb // initialize db connection
+           papiea.specDb // initialize db connection
+           papiea.providersDb // initialize db connection
 
            // Sets up the rest api engine
            papiea.api = new rest.api()
 
            // Start admin facing apis
-           papiea.admin_facing_apis()
+           papiea.adminFacingApis()
 
            // Start providers facing apis
-           papiea.provider_facing_api()
+           papiea.providerFacingApi()
 
            // Start user facing apis
-           papiea.user_facing_api()
+           papiea.userFacingApi()
        }
      #+END_SRC
 *** Exporting APIs
@@ -212,7 +212,7 @@ Papiea is aimed to be a reference implementation to a formal general purpose int
 
     #+Name: papiea-api-struct
     #+BEGIN_SRC go
-      type papiea_api_ctx struct {
+      type papieaApiContext struct {
           *papiea
           prefix string
       }
@@ -222,10 +222,10 @@ Papiea is aimed to be a reference implementation to a formal general purpose int
 
     #+Name: exporting-apis
     #+BEGIN_SRC go
-      type papiea_apis interface {
-          admin_facing_apis() err
-          providers_facing_api() err
-          user_facing_api() err
+      type papieaApis interface {
+          adminFacingApis() err
+          providersFacingApi() err
+          userFacingApi() err
       }
     #+END_SRC
     
@@ -235,9 +235,9 @@ Papiea is aimed to be a reference implementation to a formal general purpose int
 ***** Pseudocode     
       #+Name: admin-api-pc
       #+BEGIN_SRC go
-        func (papiea_apis papiea_api_ctx) admin_facing_apis() err {
-            papiea_apis.api.post(papiea_apis.prefix+"/providers", func(req, res) {
-                register_or_upgrade_provider(req.provider_description)
+        func (papieaApis papieaApiContext) adminFacingApis() err {
+            papieaApis.api.post(papieaApis.prefix+"/providers", func(req, res) procedureSignature{
+                registerOrUpgradeProvider(req.providerDescription)
             })
         }
       #+END_SRC
@@ -262,24 +262,24 @@ Papiea is aimed to be a reference implementation to a formal general purpose int
 
      #+Name: provider-api-pc
      #+BEGIN_SRC go
-       func (papiea_apis papiea_api_ctx) provider_facing_api() err {
+       func (papieaApis papieaApiContext) providerFacingApi() err {
            // Registering Provider Facing APIs
-           api = papiea_apis.api
-           papiea_prefix = papiea_apis.prefix
+           api = papieaApis.api
+           papieaPrefix = papieaApis.prefix
 	
-           api.post(papiea_prefix+"/on", func(req, res) {
+           api.post(papieaPrefix+"/on", func(req, res) {
                // callback url is being generated by the papiea provider library and passed on the request
-               papiea_apis.register_intentful_callback(req.signature, req.callback_url)
+               papieaApis.registerIntentfulCallback(req.signature, req.callbackUrl)
            })
 
-           api.post(papiea_prefix+"/procedure", func(req, res) {
+           api.post(papieaPrefix+"/procedure", func(req, res) {
                // callback url is being generated by the papiea provider library and passed on the request
-               papiea_apis.register_procedural_callback(req.signature, req.callback_url)
+               papiea_apis.registerProceduralCallback(req.signature, req.callbackUrl)
            })
 
            // Status update is only exposed to providers. Users can't update status
            api.post(papiea+"/status", func(req, res) {
-               res.status(update_status_in_db(req.uuid, req.status) ? 200 : 400)
+               res.status(statusDb.updateStatus(req.uuid, req.status) ? 200 : 400)
                return res;
            })
        }
@@ -290,10 +290,10 @@ Papiea is aimed to be a reference implementation to a formal general purpose int
      
      #+Name: user-api-pc
      #+BEGIN_SRC go
-       func (papiea papiea) user_facing_apis() err {
-           registered_providers = papiea.providers_db.list_providers()
+       func (papiea papiea) userFacingApis() err {
+           registeredProviders = papiea.providersDb.listProviders()
 
-           for _, provider := range registered_providers {
+           for _, provider := range registeredProviders {
                for _, kind := range provider.kinds{
 			
                }
@@ -323,7 +323,7 @@ Papiea is aimed to be a reference implementation to a formal general purpose int
        #+BEGIN_EXAMPLE
          current host entity : {metadata {uuid "1234"
                                           kind "host"
-                                          spec_version 3}
+                                          specVersion 3}
                                 status   {name "a"
                                           network  [{mac "1.1.1.1.1"
                                                      cidr "10.0.0.0"
@@ -335,7 +335,7 @@ Papiea is aimed to be a reference implementation to a formal general purpose int
 
          new spec change: {metadata {uuid "1234"
                                           kind "host"
-                                          spec_version 4}
+                                          specVersion 4}
                            spec     {name "new name"                    << DIFF
                                      network  [{mac "1.1.1.1.1"
                                                 cidr "10.0.0.0"
@@ -346,7 +346,7 @@ Papiea is aimed to be a reference implementation to a formal general purpose int
        #+BEGIN_EXAMPLE
          current host entity : {metadata {uuid "1234"
                                           kind "host"
-                                          spec_version 4}               << Updated
+                                          specVersion 4}               << Updated
                                 status   {name "a"
                                           network  [{mac "1.1.1.1.1"
                                                      cidr "10.0.0.0"
@@ -369,7 +369,7 @@ Papiea is aimed to be a reference implementation to a formal general purpose int
        #+BEGIN_EXAMPLE
          new spec change: {metadata {uuid "1234"
                                      kind "host"
-                                     spec_version 4}
+                                     specVersion 4}
                            spec     {name "a"
                                      network  [{mac "1.1.1.1.1"
                                                 cidr "10.0.0.0"
@@ -400,7 +400,7 @@ Papiea is aimed to be a reference implementation to a formal general purpose int
        #+BEGIN_EXAMPLE
          current host entity : {metadata {uuid "1234"
                                           kind "host"
-                                          spec_version 3}
+                                          specVersion 3}
                                 status   {field_a "value 1"
                                           inner   [{id 1
                                                     field_b "value 2"}]}
@@ -440,9 +440,9 @@ Papiea is aimed to be a reference implementation to a formal general purpose int
 **** SFS struct
     #+Name: sfs-signature
     #+BEGIN_SRC go
-      type sfs_signature struct {
+      type sfsSignature struct {
           signature string
-          parsed_signature_ast ...
+          parsedSignatureAst ...
       }
     #+END_SRC
 *** Procedures Signatures
@@ -470,8 +470,10 @@ Papiea is aimed to be a reference implementation to a formal general purpose int
 **** Procedure Signature struct
      #+Name: procedure-signature
      #+BEGIN_SRC go
-       type procedure_signature struct { signature string
-           parsed_signature_ast ...  }
+       type procedureSignature struct {
+           signature string
+           parsedSignatureAst ...
+       }
      #+END_SRC
 *** Understanding Deltas
 **** Matching SFSs to Deltas
@@ -489,8 +491,8 @@ Papiea is aimed to be a reference implementation to a formal general purpose int
     #+Name: provider-handler-interface
     #+BEGIN_SRC go
       type provider_callbacks interface {
-          register_intentful_callback(sig sfs_signature, callback_url string) err
-          register_procedural_callback(sig sfs_signature, callback_url string) err
+          registerIntentfulCallback(sig sfsSignature, callbackUrl string) err
+          registerProceduralCallback(sig procedureSignature, callbackUrl string) err
       }
     #+END_SRC
 
@@ -498,12 +500,12 @@ Papiea is aimed to be a reference implementation to a formal general purpose int
 
     #+Name: provider-handler-pc
     #+BEGIN_SRC go
-      func (api_ctx papiea_api_ctx) register_intentful_callback(sf_sig sfs_signature, callback_url string) err {
-          delta_analyzer.register(sf_sig, callback_url)
+      func (api_ctx papieaApiContext) registerIntentfulCallback(sig sfsSignature, callbackUrl string) err {
+          deltaAnalyzer.register(sig, callbackUrl)
       }
 
-      func (api_ctx papiea_api_ctx) register_procedural_callback(proc_sig proc_signature, callback_url string) err {
-          procedures.register(proc_sig, callback_url)
+      func (api_ctx papiea_api_ctx) registerProceduralCallback(sig procedureSignature, callbackUrl string) err {
+          procedures.register(sig, callbackUrl)
       }
     #+END_SRC
 *** RBAC
