--- a/Papiea-design.org
+++ b/Papiea-design.org
@@ -5,7 +5,7 @@
 #+HTML_HEAD: <style>pre.src{background:#343131;color:white;} </style>
 #+HTML_HEAD: <style>#content{max-width:70%;} </style>
 
-Papiea is aimed to be a reference implementation to a formal general purpose intent engine. 
+Papiea is aimed to be a reference implementation of a formal general purpose intent engine. 
 
 * Definitions
   - _Spec_ - a map containing the desired state of a particular entity
@@ -95,7 +95,7 @@ Papiea is aimed to be a reference implementation to a formal general purpose int
 
     It may be implemented using a very fast in-memory database, since it may require frequent access depending on an
     entity's kind requirement. It is not required to have this database persisted to disk, since its content can always
-    be reaquired by the providers, by asking all the providers to list all the real statuses of all objects known to
+    be reacquired by the providers, by asking all the providers to list all the real statuses of all objects known to
     them.
 
     Each provider for a kind will supply its entity's structure in its YAML.
